--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"biome:fix-unsafe": "biome check --fix --unsafe"
 	},
 	"dependencies": {
+		"animate.css": "^4.1.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.3.0",
